# carher-admin

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  algorithms.py  deploy-bootstrap.sh  deploy.sh  package-lock.json  package.json
.claude/: settings.json
.codex/: hooks.json
aliyun-probe/: Dockerfile  README.md  app.py  requirements.txt
backend/: acr_client.py  agent.py  budget_fallback.py  budget_fallback_api.py  budget_fallback_store.py  budget_fallback_worker.py  cloudflare_ops.py  config_gen.py  crd_helpers.py  crd_ops.py  database.py  deployer.py  fusion_diagnosis.py  k8s_ops.py  litellm_budget_client.py  litellm_ops.py  main.py  metrics.py  models.py  requirements.txt  sync_worker.py
chatgpt-pool-gateway/: Dockerfile  README.md
chatgpt-pool-gateway/gateway/: pyproject.toml
chatgpt-pool-gateway/gateway/app/: __init__.py  admin.py  affinity.py  auth.py  compaction_drop.py  config.py  convert.py  main.py  metrics.py  picker.py  probe.py  refresh.py  registry.py  sse.py  state.py  upstream.py
chatgpt-pool-gateway/gateway/chatgpt_pool_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chatgpt-pool-gateway/gateway/tests/: conftest.py  test_affinity.py  test_auth.py  test_compaction_drop.py  test_convert.py  test_picker.py  test_probe.py  test_refresh.py  test_registry.py  test_sse.py  test_state.py
docs/: 198-cc-max-routing-comparison.md  aliyun-zerokey-join-gpt55-plan.md  buyitian-key-cost-analysis-10d.md  carher-h75-batch-upgrade-retro-20260604.md  carher-h75-gray-batch-ids-20260604.md  carher-h75-session-artifacts-20260604.md  (+41 more)
(+542 files in other folders)
