[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-pool-gateway"
version = "0.1.0"
description = "198 ChatGPT Pro pool gateway (FastAPI + curl_cffi + httpx)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "curl_cffi>=0.7",
    "httpx>=0.27",
    "prometheus-client>=0.21",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "freezegun>=1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
